--- a/index.html
+++ b/index.html
@@ -516,6 +516,32 @@
     </div> -->
     <!-- Testimonial End -->
 
+    <!-- Contact Start -->
+    <div class="container-fluid py-5" id="contact">
+        <div class="container">
+            <div class="position-relative d-flex align-items-center justify-content-center">
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contacts</h1>
+                <h2 class="position-absolute text-uppercase text-center text-primary">Reach out to me via social media or email</h2>
+            </div>
+            <div class="d-flex justify-content-center mb-4">
+                <a class="btn btn-dark btn-social mr-2" href="https://github.com/Aishat452" target="_blank"><i
+                        class="fab fa-github"></i></a>
+                <a class="btn btn-dark btn-social mr-2" href="https://linkedin.com/in/AishatAdewoyin" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-dark btn-social mr-2" href="https://twitter.com/AishaAdewoyin" target="_blank"><i
+                        class="fab fa-twitter"></i></a>
+                <a class="btn btn-dark btn-social mr-2" href="https://facebook.com/AishatomoAdewoyin" target="_blank"><i
+                        class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-dark btn-social" href="mailto:aishatadewoyin@icloud.com" target="_blank">
+                    <i class="fas fa-envelope"></i>
+                </a>
+
+            </div>
+        </div>
+    </div>
+    <!-- Contact End -->
+
+
 
     <!-- Blog Start -->
     <div class="container-fluid pt-5" id="blog">
@@ -565,34 +591,6 @@
         </div>
     </div>
     <!-- Blog End -->
-
-
-    <!-- Contact Start -->
-    <div class="container-fluid py-5" id="contact">
-        <div class="container">
-            <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contacts</h1>
-                <h2 class="position-absolute text-uppercase text-center text-primary">Reach out to me via<br> social
-                    media or email</h2>
-            </div>
-            <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-dark btn-social mr-2" href="https://github.com/Aishat452" target="_blank"><i
-                        class="fab fa-github"></i></a>
-                <a class="btn btn-dark btn-social mr-2" href="https://linkedin.com/in/AishatAdewoyin" target="_blank"><i
-                        class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-dark btn-social mr-2" href="https://twitter.com/AishaAdewoyin" target="_blank"><i
-                        class="fab fa-twitter"></i></a>
-                <a class="btn btn-dark btn-social mr-2" href="https://facebook.com/AishatomoAdewoyin" target="_blank"><i
-                        class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-dark btn-social" href="mailto:aishatadewoyin@icloud.com" target="_blank">
-                    <i class="fas fa-envelope"></i>
-                </a>
-
-            </div>
-        </div>
-    </div>
-    <!-- Contact End -->
-
 
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
