--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
-                <!-- <a href="#qualification" class="nav-item nav-link">Quality</a> -->
                 <a href="#skill" class="nav-item nav-link">Skill</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
                 <a href="#service" class="nav-item nav-link">Service</a>
                 <!-- <a href="#testimonial" class="nav-item nav-link">Review</a> -->
-                <a href="#blog" class="nav-item nav-link">Blog</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
+                <a href="#blog" class="nav-item nav-link">Blog</a>
             </div>
             <a href="https://www.linkedin.com/in/aishatadewoyin" target="_blank"
                 class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
@@ -521,7 +520,8 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contacts</h1>
-                <h2 class="position-absolute text-uppercase text-center text-primary">Reach out to me via social media or email</h2>
+                <h2 class="position-absolute text-uppercase text-center text-primary">Reach out to me via social media
+                    or email</h2>
             </div>
             <div class="d-flex justify-content-center mb-4">
                 <a class="btn btn-dark btn-social mr-2" href="https://github.com/Aishat452" target="_blank"><i
