--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Aishat Adewoyin's Portfolio Website</title>
+    <title>Aisha's Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Aishats Portfolio" name="keywords">
     <meta content="Aishats Portfolio" name="description">
@@ -86,7 +86,7 @@
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
                         Aishat Adewoyin</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Back End Engineer, iOS Developer, Digital Marketer</div>
+                    <div class="typed-text d-none">Back End Engineer, Mobile Developer, Digital Marketer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="my_Portfolio/CV/Aishat_Adeladun_Adewoyin_Tech_Resume.pdf" target="_blank"
                             class="btn btn-outline-light mr-5">Download CV</a>
@@ -115,14 +115,14 @@
                     <img class="img-fluid rounded w-100" src="my_Portfolio/img/mypicture1.jpeg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Back End Engineer, iOS Developer</h3>
+                    <h3 class="mb-4">Back End Engineer, Mobile Developer</h3>
                     <p>Hi! I'm Aisha, a passionate and driven software engineer with a focus on backend software
-                        development and iOS app development. I have a strong foundation in languages such as C, Python,
-                        JavaScript, Swift and PHP</p>
+                        development and mobile app development. I have a strong foundation in languages such as C, Python,
+                        JavaScript, Swift, Flutter, and PHP</p>
 
                     <p>I enjoy diving into the intricacies of backend systems, creating efficient and scalable
                         solutions that power the core functionality of applications. Additionally, I find great
-                        satisfaction in crafting engaging user experiences through iOS app development.
+                        satisfaction in crafting engaging user experiences through mobile app development.
                     </p>
 
                     <p>With a keen eye for detail and a problem-solving mindset, I strive to build robust and
@@ -193,7 +193,7 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">CSS (SCSS, Bootstrap 5)</h6>
+                            <h6 class="font-weight-bold">CSS (SASS, Bootstrap 5)</h6>
                             <h6 class="font-weight-bold">95%</h6>
                         </div>
                         <div class="progress">
@@ -236,7 +236,7 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Swift</h6>
+                            <h6 class="font-weight-bold">Swift / Flutter</h6>
                             <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress">
@@ -283,7 +283,7 @@
                         <li class="btn btn-sm btn-outline-primary m-1 active" data-filter="*">All</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">front-End Development</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Back-End Development</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">iOS Development</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Mobile Development</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".forth">Digital Marketing</li>
                     </ul>
                 </div>
@@ -429,12 +429,12 @@
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fab fa-2x fa-apple service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0">iOS Development</h4>
+                        <h4 class="font-weight-bold m-0">Mobile Development</h4>
                     </div>
                     <p>Unlocking the potential of iOS platforms, I offer comprehensive iOS development services. With a
-                        strong command of Swift and a deep understanding of the iOS ecosystem, I create captivating and
+                        strong command of Swift and Flutter, and a deep understanding of the iOS ecosystem, I create captivating and
                         feature-rich mobile applications that seamlessly integrate with the Apple ecosystem. From
-                        concept to App Store deployment, I am dedicated to delivering engaging and intuitive iOS
+                        concepts to App Store deployment, I am dedicated to delivering engaging and intuitive iOS
                         experiences that captivate users.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
@@ -514,33 +514,28 @@
         </div>
     </div> -->
     <!-- Testimonial End -->
-
+    
+    
     <!-- Contact Start -->
     <div class="container-fluid py-5" id="contact">
-        <div class="container">
-            <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contacts</h1>
-                <h2 class="position-absolute text-uppercase text-center text-primary">Reach out to me via social media
-                    or email</h2>
-            </div>
-            <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-dark btn-social mr-2" href="https://github.com/Aishat452" target="_blank"><i
-                        class="fab fa-github"></i></a>
-                <a class="btn btn-dark btn-social mr-2" href="https://linkedin.com/in/AishatAdewoyin" target="_blank"><i
-                        class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-dark btn-social mr-2" href="https://twitter.com/AishaAdewoyin" target="_blank"><i
-                        class="fab fa-twitter"></i></a>
-                <a class="btn btn-dark btn-social mr-2" href="https://facebook.com/AishatomoAdewoyin" target="_blank"><i
-                        class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-dark btn-social" href="mailto:aishatadewoyin@icloud.com" target="_blank">
-                    <i class="fas fa-envelope"></i>
-                </a>
-
-            </div>
-        </div>
+  <div class="container">
+    <div class="position-relative d-flex align-items-center justify-content-center">
+      <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
+      <h2 class="position-absolute text-uppercase text-center text-primary">Reach out to me via social media or email</h2>
     </div>
-    <!-- Contact End -->
+    <div class="d-flex justify-content-center mb-4">
+      <a class="btn btn-dark btn-social mr-2" href="https://github.com/Aishat452" target="_blank"><i class="fab fa-github"></i></a>
+      <a class="btn btn-dark btn-social mr-2" href="https://linkedin.com/in/AishatAdewoyin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+      <a class="btn btn-dark btn-social mr-2" href="https://twitter.com/AishaAdewoyin" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a class="btn btn-dark btn-social mr-2" href="https://facebook.com/AishatomoAdewoyin" target="_blank"><i class="fab fa-facebook-f"></i></a>
+      <a class="btn btn-dark btn-social" href="mailto:aishatadewoyin@icloud.com" target="_blank">
+        <i class="fas fa-envelope"></i>
+      </a>
+    </div>
+  </div>
+</div>
 
+    <!-- Contact End -->
 
 
     <!-- Blog Start -->
@@ -591,6 +586,7 @@
         </div>
     </div>
     <!-- Blog End -->
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
